# boids

./: .dockerignore  CMakeLists.txt  Dockerfile  build-docker.sh  entrypoint.sh  main.cpp  main2.cpp  main_glfw.cpp  mymain.cpp  packages  run-boids.sh
.dev/: Dockerfile  packages
.devcontainer/: devcontainer.json
cmake/: IncludeFolder.cmake
source/: build_config.h.in  glwrapper.h
source/core/: CMakeLists.txt
source/core/math/: CMakeLists.cmake
source/core/math/include/: matrix.h  quaternion.h
source/core/math/src/: matrix.cpp  quaternion.cpp
source/core/shaders/: CMakeLists.cmake
source/core/shaders/include/: shader.h
source/core/shaders/simple-shaders/: fragment.glsl  vertex.glsl
source/core/shaders/src/: shader.cpp
