CMAKE_MINIMUM_REQUIRED(VERSION 3.16)

PROJECT(Boids
    VERSION 0.1 
    DESCRIPTION "A C++ template project"
    LANGUAGES CXX
)

set(CMAKE_BUILD_TYPE "Debug") # tmp

if (NOT CMAKE_BUILD_TYPE)
    MESSAGE(STATUS "No build type selected, default to RELEASE")
    SET(CMAKE_BUILD_TYPE "RELEASE")
endif()

SET(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake ${CMAKE_MODULE_PATH})

FIND_PACKAGE(OpenGL REQUIRED)
FIND_PACKAGE(X11 REQUIRED)
FIND_PACKAGE(glfw3 REQUIRED)

CONFIGURE_FILE(
    "${PROJECT_SOURCE_DIR}/source/build_config.h.in"
    "${PROJECT_BINARY_DIR}/include/build_config.h"
)
CONFIGURE_FILE(
    "${PROJECT_SOURCE_DIR}/source/glwrapper.h"
    "${PROJECT_BINARY_DIR}/include/glwrapper.h"
)
INCLUDE_DIRECTORIES("${PROJECT_BINARY_DIR}/include/")

ADD_SUBDIRECTORY("${PROJECT_SOURCE_DIR}/source/externals")
ADD_SUBDIRECTORY("${PROJECT_SOURCE_DIR}/source/core")

ADD_EXECUTABLE(boids main.cpp)
TARGET_LINK_LIBRARIES(boids PRIVATE GL glad glfw pthread)
TARGET_LINK_LIBRARIES(boids PRIVATE core)

INSTALL(TARGETS ${EXECUTABLE_NAME} DESTINATION "bin")

