CMAKE_MINIMUM_REQUIRED(VERSION 3.16)

INCLUDE(${CMAKE_CURRENT_SOURCE_DIR}/shaders/CMakeLists.cmake)
INCLUDE(${CMAKE_CURRENT_SOURCE_DIR}/math/CMakeLists.cmake)

ADD_LIBRARY(core SHARED ${SRC_FILES})
TARGET_LINK_LIBRARIES(core PRIVATE glad)
TARGET_INCLUDE_DIRECTORIES(core PUBLIC 
    "${CMAKE_CURRENT_SOURCE_DIR}/shaders/include"
    "${CMAKE_CURRENT_SOURCE_DIR}/math/include"
)
